--- a/BlazorHRM/Shared/NavMenu.razor
+++ b/BlazorHRM/Shared/NavMenu.razor
@@ -8,6 +8,10 @@
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+    <ProfilePicture>
+        <img class="img-fluid rounded-circle" src="images/profilePicture.jpg" />
+    </ProfilePicture>
+
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
