--- a/BlazorHRM/Components/EmployeeCard.razor
+++ b/BlazorHRM/Components/EmployeeCard.razor
@@ -1,14 +1,21 @@
 ﻿<div class="col-4 px-3">
     <div class="card w-100">
         <img class="card-img-top" src="@($"https://gillcleerenpluralsight.blob.core.windows.net/person/{Employee.EmployeeId}.jpg")" alt="Card image cap">
+
         <div class="card-body">
             <h5 class="card-title">@Employee.FirstName @Employee.LastName</h5>
+
             <button class="btn btn-primary" @onclick="@(()=> OnClickQuickView.InvokeAsync(Employee))">
                 Quick View
             </button>
+
             <button class="btn btn-outline-primary" @onclick="@(()=> NavigateToEmployeeDetails(Employee.EmployeeId))">
                 Full Details
             </button>
+
+            <a href="@($"/edit-employee/{Employee.EmployeeId}")" class="btn btn-outline-primary">
+                Edit Details
+            </a>
         </div>
     </div>
 </div>
