--- a/BlazorHRM/Shared/NavMenu.razor
+++ b/BlazorHRM/Shared/NavMenu.razor
@@ -23,6 +23,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Employees
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/create-employee">
+                <span class="oi oi-plus" aria-hidden="true"></span> Add new Employee
+            </NavLink>
+        </div>
     </nav>
 </div>
 
